added categories for users and enabled search of users by category

--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -8,8 +8,10 @@
     <a routerLink="user/add" class="btn btn-primary active" role="button" routerLinkActive="active">Add</a>
     <a routerLink="user/findbyactive" class="btn btn-primary active" role="button" routerLinkActive="active">Search</a>
     <a routerLink="category/category" class="btn btn-primary active" role="button" routerLinkActive="active">Categories</a>
-    <a routerLink="category/add" class="btn btn-primary active" role="button" routerLinkActive="active">Add</a>
-    <a routerLink="category/findbyname" class="btn btn-primary active" role="button" routerLinkActive="active">Search</a>
+    <a routerLink="category/add" class="btn btn-primary active" role="button" routerLinkActive="active">Add Category</a>
+    <a routerLink="category/findbyname" class="btn btn-primary active" role="button" routerLinkActive="active">Search Category</a>
   </nav>
+
+
   <router-outlet></router-outlet>
 </div>
