--- a/FrontEnd/src/app/user-details/user-details.component.html
+++ b/FrontEnd/src/app/user-details/user-details.component.html
@@ -6,6 +6,10 @@
     <label>Active: </label> {{user.active}}
   </div>
 
+  <div>
+    <label>Category: </label> {{user.category}}
+  </div>
+
   <span class="button is-small btn-primary" *ngIf='user.active' (click)='updateActive(false)'>Inactive</span>
 
   <span class="button is-small btn-primary" *ngIf='!user.active' (click)='updateActive(true)'>Active</span>
