--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -1,5 +1,6 @@
   <h1 style="color: blue">{{title}}</h1>
   <nav>
+    <div align="right"><button type="button" (click)="logOut()">LogOut</button></div>
     <a routerLink="user/user" class="btn btn-primary active" role="button" routerLinkActive="active">Users</a>
     <a routerLink="user/add" class="btn btn-primary active" role="button" routerLinkActive="active">Add</a>
     <a routerLink="user/findbyactive" class="btn btn-primary active" role="button" routerLinkActive="active">Search</a>
