--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -1,4 +1,5 @@
   <h1 style="color: blue">{{title}}</h1>
+  <h2>hi, {{personName}}</h2>
   <nav>
     <div align="right"><button type="button" (click)="logOut()">LogOut</button></div>
     <a routerLink="user/user" class="btn btn-primary active" role="button" routerLinkActive="active">Users</a>
