--- a/FrontEnd/src/app/user-details/user-details.component.html
+++ b/FrontEnd/src/app/user-details/user-details.component.html
@@ -2,17 +2,13 @@
   <div>
     <label>Name: </label> {{user.name}}
   </div>
-  <div>
-    <label>Active: </label> {{user.active}}
-  </div>
+
 
   <div>
     <label>Category: </label> {{user.category}}
   </div>
 
-  <span class="button is-small btn-primary" *ngIf='user.active' (click)='updateActive(false)'>Inactive</span>
-
-  <span class="button is-small btn-primary" *ngIf='!user.active' (click)='updateActive(true)'>Active</span>
+  <span class="button is-small btn-primary"  (click)='showId()'>Show Id</span>
 
   <span class="button is-small btn-danger" (click)='deleteUser()'>Delete</span>
 
